# NoteLLM

./: .gitignore  README.md
app/: main.py  pyproject.toml
backend/: alembic.ini  main.py  pyproject.toml  后端设计文档.md
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 20260131_000001_init_schema.py  20260131_000002_add_role_and_visibility.py
backend/app/: __init__.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  chat_messages.py  chat_sessions.py  community.py  files.py  health.py  infra_demo.py  mq.py  users.py
backend/app/consumers/: __init__.py  chat_memory_consumer.py  chat_memory_listener.py  file_merge_consumer.py  file_merge_listener.py  mq_utils.py  vectorize_consumer.py  vectorize_listener.py
backend/app/core/: app_state.py  constants.py  db.py  db_conf.py  dependencies.py  dependencies_infra.py  exceptions.py  logging.py  middleware.py  minio_client.py  providers.py  rabbitmq_client.py  redis_client.py  settings.py  trace_id.py
backend/app/crud/: __init__.py  chat_message_crud.py  chat_session_crud.py  chat_session_file_crud.py  community_crud.py  file_chunks_crud.py  file_storage_crud.py  rag_chunks_crud.py  user_crud.py  异步CRUD开发规范.md
backend/app/dependencies/: __init__.py  auth.py  infra.py  llm.py  memory.py  rag.py
backend/app/models/: __init__.py  chat_context.py  chat_message.py  chat_session.py  chat_session_files.py  community.py  file_chunks.py  file_storage.py  rag_chunks.py  user.py  users.py
backend/app/prompts/: __init__.py  chat_system.txt  chat_user.txt  intent_classifier.txt  memory_update.txt
backend/app/schemas/: __init__.py  auth.py  chat_message.py  chat_session.py  community.py  file_storage.py  response.py  user.py  users.py  vectorization.py
backend/app/services/: __init__.py  chat_message_service.py  chat_session_service.py  file_cleanup_service.py  file_storage_service.py  user_service.py  users_service.py  vectorization_service.py
backend/app/services/agent/: Agent模块设计指南.md  __init__.py  graph.py  intent_classifier.py
backend/app/services/chat/: __init__.py  memory_publisher.py  prompt_builder.py  rag_search.py  redis_message_store.py  session_lock.py
backend/app/services/llm/: __init__.py  service.py
backend/app/services/memory/: __init__.py  markdown_memory.py  redis_memory.py
backend/app/services/rag/: __init__.py  cache.py  errors.py  memory.py  ranker.py  retriever.py  schemas.py  service.py
backend/app/services/vectorization/: __init__.py  doc_converter.py  document_parser.py  embedder.py  errors.py  file_reader.py  orchestrator.py  task_state.py  text_chunker.py  vector_store.py
backend/app/tests/: test_chat_messages_integration.py  test_connect_blsc.py  test_connect_infra.py  test_connect_milvus.py  test_embedding_model.py  test_hybird_search.py  test_rag_cache.py  test_rag_orchestrator.py  test_rag_ranker.py  test_rag_service.py  test_text_chunk.py  test_unstructured.py
backend/app/tests/rag_modules/: milvus.py
backend/app/utils/: mq_utils.py
docs/: API接口文档.md  implementation_progress.md  multi-vector-search.md  pai_school_ddl.sql  后端核心业务设计与接口约定.md  后端模块重构与优化方案.md  提示词.txt  项目设计文档.md
frontend/: .eslintrc.js  README.md  index.html  (+4 more)
(+52 files in other folders)
