[project]
name = "my-rag-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "openai>=2.16.0",
    "pydantic-settings>=2.7.1",
    "loguru>=0.7.3",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pymysql>=1.1.0",
    "uvicorn>=0.40.0",
    "langchain-openai>=1.1.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: marks tests that require external services (e.g. local Ollama)",
]
